--- a/kubernetes-security/app/svc.yaml
+++ b/kubernetes-security/app/svc.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: hw5
+    app: nginx
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8000
+  - port: 80
+    protocol: TCP
+    targetPort: 8000
