--- a/kubernetes-templating/sa-monitoring.yaml
+++ b/kubernetes-templating/sa-monitoring.yaml
@@ -7,22 +7,21 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  namespace: homework
-  name: monitoring
+  name: metrics-reader
 rules:
-- nonResourceURLs: ["/metrics"]
+- apiGroups: [""]
+  resources: ["pods/metrics"]
   verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: monitoring
-  namespace: homework
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: monitoring
+  name: monitoring-metrics-reader
 subjects:
 - kind: ServiceAccount
   name: monitoring
   namespace: homework
+roleRef:
+  kind: ClusterRole
+  name: metrics-reader
+  apiGroup: rbac.authorization.k8s.io
