--- a/kubernetes-templating/storageclass.yaml
+++ b/kubernetes-templating/storageclass.yaml
@@ -1,6 +1,8 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: hw5
+  name: mystorageclass
 provisioner: k8s.io/minikube-hostpath
+parameters:
+  type: gp2
 reclaimPolicy: Retain
